--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon inddex.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.1.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "ws": "^8.12.0"
   }
 }
